--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ instance/*
 !instance/.gitignore
 .webassets-cache
 .env
+yolov8x.pt
+video/
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
